Downgrade to Java 1.8.